#ifndef FLOCKING_SCHEME_HPP
#define FLOCKING_SCHEME_HPP

#include <string>

#include "Flock.hpp"
#include "FlockingConfig.hpp"
#include "SimulationMetrics.hpp"

/**
 * @brief Interfaz común para todos los modelos de ejecución evaluados en el
 *        framework experimental (secuencial, grano fino, grano grueso,
 *        SMT y CMP).
 *
 * Aplica el patrón de diseño Strategy: el código cliente (main.cpp) solo
 * conoce esta interfaz y puede intercambiar el esquema de ejecución sin
 * modificar el resto del programa, cumpliendo con el principio de
 * abierto/cerrado (Open/Closed Principle).
 *
 * @author Grupo CE4302 - Proyecto 1 (Flocking / Boids)
 */
class FlockingScheme {
public:
    virtual ~FlockingScheme() = default;

    /**
     * @brief Ejecuta un único paso de la simulación: calcula la fuerza de
     *        dirección de cada boid y actualiza su posición/velocidad.
     * @param flock Enjambre a actualizar.
     * @param config Configuración de la simulación.
     * @return Métricas preliminares de la ejecución (tiempo, hilos usados,
     *         boids procesados).
     */
    virtual SimulationMetrics simulateStep(Flock& flock, const FlockingConfig& config) = 0;

    /** @return Nombre descriptivo del esquema, usado para reportes. */
    virtual std::string getSchemeName() const = 0;
};

#endif // FLOCKING_SCHEME_HPP
